fixed the alignment in workspace dialog

--- a/src/components/Dialogs/WorkspaceDialog/WorkspaceDialogComponent.scss
+++ b/src/components/Dialogs/WorkspaceDialog/WorkspaceDialogComponent.scss
@@ -9,7 +9,7 @@
         margin-bottom: 5px;
 
         .bp3-input-group {
-            margin: 10px 5px 5px;
+            margin-top: 10px;
         }
     }
 
